objects/tspa__ObjectFieldSettingsForInviteComponent__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Visual Remote Assistant - Objects for Invite Form Configuration.
Object and field mapping needs to be configured here to have component on the page.</description>
    <fields>
        <fullName>tspa__Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Customer_Refrence_Field__c</fullName>
        <label>Reference Number Field</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Digital_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Email_Field__c</fullName>
        <label>Email Field</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Is_knowledgebase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is knowledgebase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Knowledgebase_Filter__c</fullName>
        <label>Knowledgebase Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Knowledgebase_Result__c</fullName>
        <label>Knowledgebase Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Language_Field__c</fullName>
        <label>Language Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Message_Type__c</fullName>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Phone_Number_Field__c</fullName>
        <label>Phone Number Field</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Type_Field__c</fullName>
        <label>Session Type Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant - Object support</label>
    <listViews>
        <fullName>tspa__Show_Info</fullName>
        <columns>NAME</columns>
        <columns>tspa__Customer_Refrence_Field__c</columns>
        <columns>tspa__Phone_Number_Field__c</columns>
        <columns>tspa__Email_Field__c</columns>
        <columns>tspa__Customer_Name__c</columns>
        <columns>tspa__Language_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>Show Info</label>
    </listViews>
</CustomObject>